# FastAPI-Auth

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 5508890c4018_init_db.py  5e303044115c_init_db.py  77ccd877bf7a_initial_database.py
backend/app/: __init__.py  crud.py  generate_keys.py  initial_data.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: c4e4c8cb4c86_add_some_more_models.py  d047a24b57d0_initial_migration.py  e6b1287ce009_change_model.py
backend/app/api/: api_login.py  api_logout.py  api_router.py  api_user.py  dependencies.py
backend/app/core/: config.py  database.py  db_connect.py  security.py
backend/app/models/: refresh_token.py  token.py  user.py
